@@ -582,8 +582,24 @@ condition|)
 block|{
 name|GtkWidget
 modifier|*
+name|content_area
+decl_stmt|;
+name|GtkWidget
+modifier|*
 name|image
 decl_stmt|;
+name|content_area
+operator|=
+name|gtk_dialog_get_content_area
+argument_list|(
+name|GTK_DIALOG
+argument_list|(
+name|query_box
+operator|->
+name|qbox
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|hbox
 operator|=
 name|gtk_hbox_new
@@ -607,14 +623,7 @@ name|gtk_container_add
 argument_list|(
 name|GTK_CONTAINER
 argument_list|(
-name|GTK_DIALOG
-argument_list|(
-name|query_box
-operator|->
-name|qbox
-argument_list|)
-operator|->
-name|vbox
+name|content_area
 argument_list|)
 argument_list|,
 name|hbox
@@ -721,6 +730,22 @@ expr_stmt|;
 block|}
 else|else
 block|{
+name|GtkWidget
+modifier|*
+name|content_area
+decl_stmt|;
+name|content_area
+operator|=
+name|gtk_dialog_get_content_area
+argument_list|(
+name|GTK_DIALOG
+argument_list|(
+name|query_box
+operator|->
+name|qbox
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|gtk_container_set_border_width
 argument_list|(
 name|GTK_CONTAINER
@@ -737,14 +762,7 @@ name|gtk_container_add
 argument_list|(
 name|GTK_CONTAINER
 argument_list|(
-name|GTK_DIALOG
-argument_list|(
-name|query_box
-operator|->
-name|qbox
-argument_list|)
-operator|->
-name|vbox
+name|content_area
 argument_list|)
 argument_list|,
 name|query_box
