@@ -1,5 +1,10 @@
 2009-03-22  Michael Natterer  <mitch@gimp.org>
 
+	* libgimpwidgets/gimpquerybox.c (create_query_box): use
+	gtk_dialog_get_content_area() instead of dialog->vbox.
+
+2009-03-22  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimptagentry.c: use "list" as variable name for
 	iterators to be consistent with the rest of GIMP; various code
 	cleanups.
